Feature: Adicionando Landing page com login do usuário.

--- a/web/src/styles/pages/survey-register.css
+++ b/web/src/styles/pages/survey-register.css
@@ -153,6 +153,10 @@
   cursor: auto;
 }
 
+#survey-wrapper .survey-container form .form-block {
+  margin-bottom: 20px;
+}
+
 #survey-wrapper .survey-container .add-company-block {
   width: 100%;
   overflow: hidden;
