--- a/web/src/styles/components/form-field.css
+++ b/web/src/styles/components/form-field.css
@@ -2,7 +2,6 @@
   width: 100%;
   position: relative;
   height: 48px;
-  margin-bottom: 20px;
 }
 
 #form-wrapper input {
@@ -25,7 +24,7 @@
   left: 10px;
   top: 13px;
   padding: 0 5px;
-  background-color: #f7fbfd;
+  background-color: transparent;
   color: #80868b;
   font-size: 16px;
   transition: 0.3s;
@@ -36,6 +35,7 @@
   top: -7px;
   left: 10px;
   /* color: #bec8ff; */
+  background-color: #f7fbfd;
   font-size: 13px;
   font-weight: 500;
   z-index: 10;
