--- a/web/src/styles/components/header.css
+++ b/web/src/styles/components/header.css
@@ -9,18 +9,24 @@
   right: 0;
   z-index: 100;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#header-container .header-menus {
+  display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-#header-container .separator {
+#header-container .header-menus .separator {
   height: 25px;
   margin-left: 15px;
   margin-right: 15px;
   border-left: 2px solid #37474f;
 }
 
-#header-container a {
+#header-container .header-menus a {
   width: 150px;
   height: 40px;
   border-radius: 10px;
@@ -34,7 +40,23 @@
   align-items: center;
 }
 
-#header-container a:hover {
+#header-container .header-menus a:hover {
   background-color: #37474f;
+  color: #fff;
+}
+
+#header-container .header-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#header-container .header-user svg {
+  color: #37474f;
+  cursor: pointer;
+}
+
+#header-container .header-user svg:hover {
+  cursor: pointer;
   color: #fff;
 }
